--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeBay | AI-Powered Software Development Agency</title>
-    <meta name="description" content="CodeBay builds professional-grade software using AI, delivering weeks of work in days. Fast, reliable, and built to scale." />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CodeBay | AI-Powered Software Development Agency</title>
+  <meta
+   name="description"
+   content="CodeBay builds professional-grade software using AI, delivering weeks of work in days. Fast, reliable, and built to scale."
+  />
+  <!-- TODO: Set the document title to the name of your application -->
+  <title>Lovable App</title>
+  <meta name="description" content="Lovable Generated Project" />
+  <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- TODO: Update og:title to match your application name -->
+  <meta property="og:title" content="CodeBay" />
+  <meta property="og:description" content="CodeBay" />
+  <meta property="og:type" content="website" />
+  <meta
+   property="og:image"
+   content="https://codebay.dev/opengraph-image-p98pqg.png"
+  />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@CodeBay" />
+  <meta
+   name="twitter:image"
+   content="https://codebay.dev/opengraph-image-p98pqg.png"
+  />
+ </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+ <body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+ </body>
 </html>
