--- a/index.html
+++ b/index.html
@@ -3,31 +3,100 @@
  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#000000" />
+  
+  <!-- Primary Meta Tags -->
   <title>CodeBay | AI-Powered Software Development Agency</title>
+  <meta
+   name="title"
+   content="CodeBay | AI-Powered Software Development Agency"
+  />
   <meta
    name="description"
    content="CodeBay builds professional-grade software using AI, delivering weeks of work in days. Fast, reliable, and built to scale."
   />
-  <!-- TODO: Set the document title to the name of your application -->
-  <title>Lovable App</title>
-  <meta name="description" content="Lovable Generated Project" />
-  <meta name="author" content="Lovable" />
-
-  <!-- TODO: Update og:title to match your application name -->
-  <meta property="og:title" content="CodeBay" />
-  <meta property="og:description" content="CodeBay" />
+  <meta name="author" content="CodeBay" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://codebay.dev/" />
+  
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta
-   property="og:image"
-   content="https://codebay.dev/opengraph-image-p98pqg.png"
-  />
-
+  <meta property="og:url" content="https://codebay.dev/" />
+  <meta property="og:title" content="CodeBay | AI-Powered Software Development Agency" />
+  <meta property="og:description" content="CodeBay builds professional-grade software using AI, delivering weeks of work in days. Fast, reliable, and built to scale." />
+  <meta property="og:image" content="https://codebay.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:site_name" content="CodeBay" />
+  <meta property="og:locale" content="en_US" />
+  
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://codebay.dev/" />
+  <meta name="twitter:title" content="CodeBay | AI-Powered Software Development Agency" />
+  <meta name="twitter:description" content="CodeBay builds professional-grade software using AI, delivering weeks of work in days. Fast, reliable, and built to scale." />
+  <meta name="twitter:image" content="https://codebay.dev/opengraph-image-p98pqg.png" />
   <meta name="twitter:site" content="@CodeBay" />
-  <meta
-   name="twitter:image"
-   content="https://codebay.dev/opengraph-image-p98pqg.png"
-  />
+  <meta name="twitter:creator" content="@CodeBay" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CodeBay",
+    "url": "https://codebay.dev",
+    "logo": "https://codebay.dev/opengraph-image-p98pqg.png",
+    "description": "CodeBay builds professional-grade software using AI, delivering weeks of work in days. Fast, reliable, and built to scale.",
+    "sameAs": [
+      "https://twitter.com/CodeBay"
+    ],
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "Customer Service",
+      "availableLanguage": "English"
+    }
+  }
+  </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "CodeBay",
+    "url": "https://codebay.dev",
+    "description": "AI-Powered Software Development Agency",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://codebay.dev/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "Software Development",
+    "provider": {
+      "@type": "Organization",
+      "name": "CodeBay"
+    },
+    "description": "Professional-grade software development using AI, delivering weeks of work in days.",
+    "areaServed": "Worldwide"
+  }
+  </script>
  </head>
 
  <body>
