--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   />
   <meta
    property="og:image"
-   content="https://codebay.dev/opengraph-image-p98pqg.png"
+   content="https://codebay.dev/codebay.svg"
   />
   <meta property="og:site_name" content="CodeBay" />
   <meta property="og:locale" content="en_US" />
@@ -57,14 +57,16 @@
   />
   <meta
    name="twitter:image"
-   content="https://codebay.dev/opengraph-image-p98pqg.png"
+   content="https://codebay.dev/codebay.svg"
   />
   <meta name="twitter:site" content="@CodeBay" />
   <meta name="twitter:creator" content="@CodeBay" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -77,7 +79,7 @@
     "@type": "Organization",
     "name": "CodeBay",
     "url": "https://codebay.dev",
-    "logo": "https://codebay.dev/opengraph-image-p98pqg.png",
+    "logo": "https://codebay.dev/codebay.svg",
     "description": "CodeBay builds professional-grade software using AI, delivering weeks of work in days. Fast, reliable, and built to scale.",
     "sameAs": ["https://twitter.com/CodeBay"],
     "contactPoint": {
